--- a/GoPersonalBlog/admin/template/adminlogin.html
+++ b/GoPersonalBlog/admin/template/adminlogin.html
@@ -9,6 +9,7 @@
             <input type="text" id="username" name="username">
             <label for="username">Password:</label>
             <input type="password" id="password" name="password">
+            <button type="submit">Submit</button>
         </form>
     </body>
 </html>
